app-test/testdata/typesystem/neg/tuple-type-element-access/check/tuple1.check
testdata/typesystem/neg/tuple-type-element-access/src/tuple.cal:5:21: error: No member #0 for (int, bool).
            OUT <-- a.#0;
                    ^^^^